# metrics_tracker

./: Dockerfile  docker-compose.yml  local.sh  local.yml  manage.py  manage_py_entrypoint.sh  production.yml  pyproject.toml  requirements.txt  ssip-metrics-production.service
.envs/.local/: .django
.envs/.production/.django/: django.example.env
compose/local/django/: Dockerfile  start
compose/production/django/: Dockerfile  start
config/: asgi.py  settings.py  urls.py  wsgi.py
metrics_tracker/: asgi.py  settings.py  urls.py  wsgi.py
metrics_tracker/tracker/: apps.py  forms.py  models.py  views.py
metrics_tracker/tracker/migrations/: 0001_initial.py  0002_auto_20210114_1927.py  0003_auto_20210114_2002.py  0004_auto_20210116_2241.py  0005_auto_20210118_0110.py  0006_auto_20210118_1952.py  0007_auto_20210203_0418.py  0008_session_session_count_update_timestamp.py  0009_auto_20210208_1421.py
metrics_tracker/tracker/templates/: base.html  index.html  nav.html
metrics_tracker/tracker/templates/tracker/: index_tracker.html  session_detail.html  tracker_detail.html  tracker_list.html
metrics_tracker/tracker/templatetags/: tracker_extras.py
static/js/: main.js
templates/: base.html  index.html  nav.html
templates/tracker/: index_record.html  index_tracker.html  record_detail.html  tracker_detail.html
tracker/: forms.py  models.py  views.py
tracker/migrations/: 0001_initial.py  0002_auto_20201125_1838.py  0003_auto_20201125_2003.py  0004_auto_20201204_0813.py  0005_auto_20201207_0905.py  0006_auto_20201227_1857.py  0007_auto_20201228_2243.py
